# dynamic-desktop

./: README.md
.github/workflows/: build.yml
ci/: install.sh
next-src/: .eslintrc.json  next.config.js  package-lock.json  package.json  tsconfig.json
next-src/src/app/: page.tsx
next-src/src/app/player/: client.tsx  copyright.tsx  download-mangle.ts  page.module.css  page.tsx  toolbar.tsx  useTimer.ts
next-src/src/app/setting/: client.tsx  page.tsx  tabs.tsx
next-src/src/utils/: database.ts
plugins/window/: Cargo.toml
plugins/window/src/: lib.rs
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  menu.rs  open.rs  window_api.rs
